Add more than a fox box support

--- a/src/main/resources/assets/notatoy/lang/en_us.json
+++ b/src/main/resources/assets/notatoy/lang/en_us.json
@@ -7,6 +7,7 @@
   "item.notatoy.waste" : "Waste",
   "itemGroup.notatoy" : "Not A Toy",
   "advancement.notatoy.fungoop" : "You're not meant to eat that...",
-  "advancement.notatoy.fungoop.description" : "Eat some Radioactive Fun Goo!"
+  "advancement.notatoy.fungoop.description" : "Eat some Radioactive Fun Goo!",
+  "item.more_than_a_foxbox.plushie.notatoy.radioactive_fun_goop": "Radioactive Fun Goop Plushie"
 
 }
