--- a/src/main/resources/assets/notatoy/lang/uk_ua.json
+++ b/src/main/resources/assets/notatoy/lang/uk_ua.json
@@ -3,8 +3,8 @@
   "death.attack.radiation_damage": "%1$s занадто сильно опромінився",
   "death.attack.ate_goop": "%1$s з'їв радіоактивне щось",
   "item.notatoy.radioactive_fun_goop" : "Радіоактивне щось",
-  "block.notatoy.waste" : "Радіоактвині відходи",
-  "item.notatoy.waste" : "Радіоактвині відходи",
+  "block.notatoy.waste" : "Радіоактивні відходи",
+  "item.notatoy.waste" : "Радіоактивні відходи",
   "itemGroup.notatoy" : "Not A Toy",
   "advancement.notatoy.fungoop" : "Тобі не призначено це їсти…",
   "advancement.notatoy.fungoop.description" : "З'їжте радіоактивне щось!",
